--- a/assets/css/sb-admin-2.css
+++ b/assets/css/sb-admin-2.css
@@ -24,8 +24,8 @@
   --white: #fff;
   --gray: #858796;
   --gray-dark: #5a5c69;
-  --primary: #4e73df;
-  --secondary: #858796;
+  --primary: #022060;
+  --secondary: #FF4D00;
   --success: #1cc88a;
   --info: #36b9cc;
   --warning: #f6c23e;
